Реализация поиска рейсов и формирования маршрута

--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -4,11 +4,11 @@ password=COMBI2018way
 request.timeout=300000
 request.search.timeout=10000
 
-# 1 hour (for trips)
-cache.time.to.live=3600000
+# if 0 - then to max trip departure date (used for price too)
+cache.trip.time.to.live=0
 
-# 10 minutes (for trips)
-cache.update.delay=600000
+# 30 minutes (for trips)
+cache.trip.update.delay=1800000
 
 # 15 minutes
 cache.error.time.to.live=900000
