--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -1,6 +1,9 @@
-url=https://rezerwacje.neobus.pl:8443/testapi/api/
+#url=https://rezerwacje.neobus.pl:8443/testapi/api/
+#url=https://test.rezerwacje.neobus.pl/1.6.4/api/
+url=http://test.rezerwacje.neobus.pl/1.6.4/api/
 login=combiway
-password=COMBI2018way
+#password=COMBI2018way
+password=Combi123
 request.timeout=300000
 request.search.timeout=10000
 
